# simple-print

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py  tox.ini
env/: pyvenv.cfg
simple_print/: __init__.py  art_enum.py  broker.py  consts.py  functions.py  spprint.py  sprint.py  sprint_err.py
test/: test_broker.py  test_print.py  test_sprint.py  test_sprint_err.py
tests/: test_art_enum.py  test_spprint.py  test_sprint.py  test_sprint_err.py
