[project]
name = "simple-print"
version = "2.2.7"
description = "Local development tool for logs printing."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Sobolev Andrey", email = "email.asobolev@gmail.com" },
]
dependencies = [
  "executing==2.2.1",
  "asttokens==3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "twine==6.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

